...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
...

                        <EditText
                            android:id="@+id/add_name_input"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
...

                        <EditText
                            android:id="@+id/add_area_input"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
...

                        <EditText
                            android:id="@+id/add_price_input"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
...

                        <EditText
                            android:id="@+id/add_surface_input"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
...

                            <EditText
                                android:id="@+id/add_description_text"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
...

                            <EditText
                                android:id="@+id/add_street_number_input"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
...

                            <EditText
                                android:id="@+id/add_street_name_input"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
...

                            <EditText
                                android:id="@+id/add_postal_code_input"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
...

                            <EditText
                                android:id="@+id/add_city_input"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
...

                            <EditText
                                android:id="@+id/add_country_input"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
...

                    <Button
                        android:id="@+id/create"
                        style="@style/Widget.MaterialComponents.Button"
                        android:layout_width="wrap_content"
...
