...
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:expandableTextView="http://schemas.android.com/apk/res-auto"
    android:id="@+id/property_details_main_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.activities.PropertyDetailsActivity">

    <!-- Toolbar -->
    <include
...
                app:sliderScrollTimeInSec="2"
                app:sliderStartAutoCycle="true"
                app:layout_constraintTop_toBottomOf="@id/main_toolbar" />


            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/property_details_update_button"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:layout_marginEnd="@dimen/default_margin"
                android:clickable="true"
                android:focusable="true"
                app:layout_constraintBottom_toTopOf="@+id/property_details_information_section"
...
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingVertical="@dimen/default_medium_padding">


                    <TextView
                        android:id="@+id/property_details_information_title"
                        style="@style/cardMainTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorPrimary"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="@string/property_details_information_title" />

                    <TextView
                        android:id="@+id/property_details_information_area"
                        android:textSize="@dimen/default_subtitle_size"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorPrimaryDark"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
...
                        android:text="@string/property_details_description_title"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />


                    <TextView
                        android:id="@+id/property_details_description_text"
                        style="@style/descriptionText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="@dimen/small_margin"
                        android:gravity="start"
                        android:lineBreakStyle="strict"
...
