<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.LoginActivity">

    <!-- Toolbar -->
    <include
...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/guideline_input"
        app:endIconMode="clear_text" >

        <EditText
            android:id="@+id/login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/drawable_padding_medium"
            android:drawableTint="@color/colorPrimary"
            android:drawableStart="@drawable/ic_baseline_email_24"
            android:hint="@string/login_email_title"
...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline_input"
        app:endIconMode="password_toggle">

        <EditText
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            android:drawablePadding="@dimen/drawable_padding_medium"
            android:drawableTint="@color/colorPrimary"
            android:drawableStart="@drawable/ic_baseline_password_24"
...
            android:textSize="@dimen/higher_plus_text_size"
            android:imeOptions="actionNext" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/login_button"
        style="@style/Widget.Material3.Button.ElevatedButton.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="270dp"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/sign_in_button_text"
...
