<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_navigation_menu"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/drawer_navigation_login"
            android:icon="@drawable/ic_drawer_navigation_login_24"
            android:title="@string/drawer_title_login" />
        <item
            android:id="@+id/drawer_navigation_my_properties"
            android:icon="@drawable/ic_details_rooms_24"
            android:title="@string/drawer_title_my_properties"
            android:visibility="gone"/>
        <item
            android:id="@+id/drawer_navigation_my_favorites"
            android:icon="@drawable/ic_drawer_navigation_favorite_24"
            android:title="@string/drawer_title_my_favorites"
            android:visibility="gone"/>
        <item
            android:id="@+id/drawer_navigation_settings"
            android:icon="@drawable/ic_drawer_navigation_settings_24"
            android:title="@string/drawer_title_settings"
            android:visibility="gone"/>
        <item
            android:id="@+id/drawer_navigation_logout"
            android:icon="@drawable/ic_drawer_navigation_logout_24"
            android:title="@string/drawer_title_logout"
            android:visibility="gone"/>

    </group>

</menu>